--- a/APIGatewayJWTAuthenticationDemo/APIGateway/APIGateway.csproj
+++ b/APIGatewayJWTAuthenticationDemo/APIGateway/APIGateway.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="NLog" Version="4.5.2" />
     <PackageReference Include="Ocelot" Version="2.0.3" />
   </ItemGroup>
 
