--- a/APIGatewayLoggingDemo/APIGateway/configuration.json
+++ b/APIGatewayLoggingDemo/APIGateway/configuration.json
@@ -1,19 +1,31 @@
 ﻿{
     "ReRoutes": [
         {
-            "DownstreamPathTemplate": "/api/values",
+            "DownstreamPathTemplate": "/api/customers",
             "DownstreamScheme": "http",
             "DownstreamHost": "localhost",
             "DownstreamPort": 9001,
             "UpstreamPathTemplate": "/customers",
-            "UpstreamHttpMethod": [ "Get" ]
+            "UpstreamHttpMethod": [ "Get" ],
+            "AuthenticationOptions": {
+                "AuthenticationProviderKey": "TestKey",
+                "AllowedScopes": []
+            }
         },
         {
-            "DownstreamPathTemplate": "/api/values/{id}",
+            "DownstreamPathTemplate": "/api/customers/{id}",
             "DownstreamScheme": "http",
             "DownstreamHost": "localhost",
             "DownstreamPort": 9001,
             "UpstreamPathTemplate": "/customers/{id}",
+            "UpstreamHttpMethod": [ "Get" ]
+        },
+        {
+            "DownstreamPathTemplate": "/api/auth",
+            "DownstreamScheme": "http",
+            "DownstreamHost": "localhost",
+            "DownstreamPort": 9009,
+            "UpstreamPathTemplate": "/api/auth",
             "UpstreamHttpMethod": [ "Get" ]
         }
     ],
